# tauri-tool

./: .editorconfig  eslint-auto-import.cjs  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
public/: splash.html
src/: App.vue  main.ts  test.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/App/: test.json
src-tauri/src/: command.rs  main.rs
src/components/mdi-icon/: index.vue
src/components/nav-bar/: index.vue
src/components/x-table/: index.vue
src/layouts/: default.vue
src/layouts/components/: header.vue
src/lib/constant/: coordinates.ts  highlight.ts  themes.ts
src/lib/plugins/: bytemd-plugin-theme.ts
src/lib/utils/: assetsUrl.ts  coordinateTransformer.ts  excel.ts  fs.ts  themeUtil.ts  vxeTable.ts  windows.ts
src/router/: index.ts
src/style/: _mixins.scss  _variables.scss  contextmenu.scss  elementplus.scss  global.scss
src/theme/: theme.ts
src/typings/: components.d.ts  vite-env.d.ts
src/views/: [...all].vue  index.vue
src/views/about/: index.vue
src/views/coordinate/: index.vue
src/views/excel/: index.vue
src/views/home/: index.vue
src/views/iconfont/: index.vue
src/views/markdown/: index.vue
src/views/notfound/: index.vue
src/views/settings/: index.vue
src/views/text/: index.vue
